# plutus-accumulator

./: .gitignore  README.md  cabal.project  flake.nix
accumulator-proof-server/: Cargo.toml
accumulator-proof-server/src/: main.rs  poly.rs
aiken-bilinear-accumulator/: README.md  aiken.toml  plutus.json
aiken-bilinear-accumulator/lib/aiken-bilinear-accumulator/: accumulator.ak  poly.ak
aiken-bilinear-accumulator/lib/aiken_bilinear_accumulator/: accumulator.ak  poly.ak  testing-vectors.ak
aiken-bilinear-accumulator/validators/: accumulator.ak
aiken-utils/: aiken-utils.cabal
aiken-utils/app/: Main.hs
aiken-utils/src/: Testing.hs
local-testnet/scripts/babbage/: conway-babbage-test-genesis.json
nix/: haskell-project.nix  outputs.nix  rust-project.nix  shell.nix
plutus-accumulator/: plutus-accumulator.cabal
plutus-accumulator/src/: Offchain.hs
plutus-accumulator/src/Plutus/Crypto/: Accumulator.hs  BlsUtils.hs
plutus-benchmark/: plutus-benchmark.cabal
plutus-benchmark/common/PlutusBenchmark/: Common.hs
plutus-benchmark/verifier/: Main.hs  RunVerifier.hs  Scripts.hs
veritas/: Cargo.toml
veritas/src/: main.rs  poly.rs  poly_fft.rs
